<resources>
    <string name="app_name">GratefulMind</string>
    <string name="grateful_mind">Grateful Mind</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="ayuda">Ayuda</string>
    <string name="agradecer">Agradecer</string>
    <string name="bien">Bien</string>
    <string name="muyBien">Muy bien</string>
    <string name="regular">Regular</string>
    <string name="mal">Mal</string>
    <string name="fecha">Fecha:</string>
    <string name="cosas">3 cosas de las que estoy agradecido:</string>
    <string name="aprendido">He aprendido:</string>
    <string name="siento">Me siento:</string>
    <string name="porque">¿Porque me siento así?</string>

    <string name="mis_agradecimientos">Mis agradecimientos</string>
    <string name="todo1">TODO</string>
    <string name="todo6">TODO</string>
    <string name="volver">Volver</string>
    <string name="todo7">TODO</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="fecha2">Fecha:</string>
    <string name="agradecimiento_1">Agradecimiento 1:</string>
    <string name="agradecimiento_2">Agradecimiento 2:</string>
    <string name="agradecimiento_3">Agradecimiento 3:</string>
    <string name="lecci_n">Lección:</string>
    <string name="c_mo_te_sientes">Cómo te sientes:</string>
    <string name="por_qu">Por qué:</string>
    <string name="volver_">Volver</string>
    <string name="todooo">TODO</string>
    <string name="al_presionar_el_bot_n_lista_de_agradecimientos_se_mostrar_una_lista_con_todos_los_agradecimientos_guardados_previamente">Al presionar el botón \'Lista de agradecimientos\' se mostrará una lista con todos los agradecimientos guardados previamente.</string>
    <string name="o">TODO</string>
    <string name="siguiente">Siguiente</string>
    <string name="en_la_pantalla_de_agradecer_puedes_a_adir_la_fecha_del_d_a_en_el_que_quieres_a_adir_los_agradecimientos_hay_distintos_campos_que_puedes_rellenar_como_3_cosas_con_las_que_te_has_sentido_agradecido_o_que_has_aprendido_ese_d_a_tienes_las_opciones_de_presionar_la_flecha_de_abajo_a_la_izquierda_para_volver_a_la_pantalla_principal_o_pulsar_a_la_cruz_blanca_sobre_circulo_azul_para_guardar_el_agradecimiento">En la pantalla de \'Agradecer\' puedes añadir la fecha del día en el que quieres añadir los agradecimientos. Hay distintos campos que puedes rellenar, como 3 cosas con las que te has sentido agradecido o que has aprendido ese día. Tienes las opciones de presionar la flecha de abajo a la izquierda para volver a la pantalla principal o pulsar a la cruz blanca sobre circulo azul para guardar el agradecimiento.</string>
</resources>