<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F29363">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#2196F3"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:logo="@mipmap/ic_launcher_foreground"
        app:title="Grateful Mind"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:titleTextColor="@color/black"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="413dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/o"
        android:src="@drawable/agradecer_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="386dp"
        android:layout_height="157dp"
        android:layout_marginTop="16dp"
        android:text="@string/en_la_pantalla_de_agradecer_puedes_a_adir_la_fecha_del_d_a_en_el_que_quieres_a_adir_los_agradecimientos_hay_distintos_campos_que_puedes_rellenar_como_3_cosas_con_las_que_te_has_sentido_agradecido_o_que_has_aprendido_ese_d_a_tienes_las_opciones_de_presionar_la_flecha_de_abajo_a_la_izquierda_para_volver_a_la_pantalla_principal_o_pulsar_a_la_cruz_blanca_sobre_circulo_azul_para_guardar_el_agradecimiento"
        android:textColor="#263238"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/siguiente"
        android:backgroundTint="#2196F3"
        android:textColor="#050505"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>
